// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sign In Page should render all allow 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.svg"
            style="color: transparent;"
            width="24"
          />
          <div
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <div
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            >
              S_:GHQo.!/
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r0:"
            type="button"
          >
            <div
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <div
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="bg-primary border-fill-secondary absolute left-1/2 top-1/2 min-w-[440px] -translate-x-1/2 -translate-y-1/2 rounded border p-8"
    >
      <div
        class="relative"
      >
        <div
          class="mb-8 flex flex-col items-center gap-1"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="50"
            loading="lazy"
            src="/assets/images/logo-horizontal.svg"
            style="color: transparent;"
            width="124.5"
          />
          <div
            class="font-14-regular w-full text-center"
          >
            S_:GHQo.!/
          </div>
        </div>
        <form>
          <div
            class="mb-6 flex flex-col gap-3"
          >
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="email"
                  placeholder="ID"
                  type="email"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="password"
                  placeholder="Password"
                  type="password"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <button
              class="btn btn-lg btn-primary"
              disabled=""
              type="submit"
            >
              button.sign-in
            </button>
            <button
              class="btn btn-lg btn-secondary"
              type="button"
            >
              button.sign-up
            </button>
          </div>
        </form>
        <div
          class="my-1 flex flex-col gap-1"
        >
          <div
            class="relative my-5"
          >
            <span
              class="absolute-center text-secondary bg-primary absolute px-2 py-1"
            >
              OR
            </span>
            <hr />
          </div>
          <button
            class="btn btn-lg btn-blue"
            disabled=""
            type="button"
          >
            OAuth2.0 
            button.sign-in
          </button>
        </div>
        <div
          class="absolute -bottom-28 left-1/2 -translate-x-1/2"
        >
          <a
            class="text-blue-primary font-14-regular"
            href="/auth/reset-password"
          >
            auth.sign-in.reset-password
          </a>
        </div>
      </div>
    </div>
    <footer
      class="font-14-bold text-secondary absolute bottom-[7%] left-1/2 z-10 -translate-x-1/2"
    >
      © ABC Studio All rights reserved
    </footer>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`Sign In Page should render when isPrivate is false 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.svg"
            style="color: transparent;"
            width="24"
          />
          <div
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <div
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            >
              S_:GHQo.!/
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r2:"
            type="button"
          >
            <div
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <div
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="bg-primary border-fill-secondary absolute left-1/2 top-1/2 min-w-[440px] -translate-x-1/2 -translate-y-1/2 rounded border p-8"
    >
      <div
        class="relative"
      >
        <div
          class="mb-8 flex flex-col items-center gap-1"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="50"
            loading="lazy"
            src="/assets/images/logo-horizontal.svg"
            style="color: transparent;"
            width="124.5"
          />
          <div
            class="font-14-regular w-full text-center"
          >
            S_:GHQo.!/
          </div>
        </div>
        <form>
          <div
            class="mb-6 flex flex-col gap-3"
          >
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="email"
                  placeholder="ID"
                  type="email"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="password"
                  placeholder="Password"
                  type="password"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <button
              class="btn btn-lg btn-primary"
              disabled=""
              type="submit"
            >
              button.sign-in
            </button>
          </div>
        </form>
        <div
          class="my-1 flex flex-col gap-1"
        >
          <div
            class="relative my-5"
          >
            <span
              class="absolute-center text-secondary bg-primary absolute px-2 py-1"
            >
              OR
            </span>
            <hr />
          </div>
          <button
            class="btn btn-lg btn-blue"
            disabled=""
            type="button"
          >
            OAuth2.0 
            button.sign-in
          </button>
        </div>
      </div>
    </div>
    <footer
      class="font-14-bold text-secondary absolute bottom-[7%] left-1/2 z-10 -translate-x-1/2"
    >
      © ABC Studio All rights reserved
    </footer>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`Sign In Page should render when useEmail is false 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.svg"
            style="color: transparent;"
            width="24"
          />
          <div
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <div
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            >
              S_:GHQo.!/
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r6:"
            type="button"
          >
            <div
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <div
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="bg-primary border-fill-secondary absolute left-1/2 top-1/2 min-w-[440px] -translate-x-1/2 -translate-y-1/2 rounded border p-8"
    >
      <div
        class="relative"
      >
        <div
          class="mb-8 flex flex-col items-center gap-1"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="50"
            loading="lazy"
            src="/assets/images/logo-horizontal.svg"
            style="color: transparent;"
            width="124.5"
          />
          <div
            class="font-14-regular w-full text-center"
          >
            S_:GHQo.!/
          </div>
        </div>
        <div
          class="my-1 flex flex-col gap-1"
        >
          <button
            class="btn btn-lg btn-blue"
            disabled=""
            type="button"
          >
            OAuth2.0 
            button.sign-in
          </button>
        </div>
      </div>
    </div>
    <footer
      class="font-14-bold text-secondary absolute bottom-[7%] left-1/2 z-10 -translate-x-1/2"
    >
      © ABC Studio All rights reserved
    </footer>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`Sign In Page should render when useOAuth is false 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.svg"
            style="color: transparent;"
            width="24"
          />
          <div
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <div
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            >
              S_:GHQo.!/
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r4:"
            type="button"
          >
            <div
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <div
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="bg-primary border-fill-secondary absolute left-1/2 top-1/2 min-w-[440px] -translate-x-1/2 -translate-y-1/2 rounded border p-8"
    >
      <div
        class="relative"
      >
        <div
          class="mb-8 flex flex-col items-center gap-1"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="50"
            loading="lazy"
            src="/assets/images/logo-horizontal.svg"
            style="color: transparent;"
            width="124.5"
          />
          <div
            class="font-14-regular w-full text-center"
          >
            S_:GHQo.!/
          </div>
        </div>
        <form>
          <div
            class="mb-6 flex flex-col gap-3"
          >
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="email"
                  placeholder="ID"
                  type="email"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <div
                class="relative"
              >
                <input
                  class="input  input-lg pl-10 pr-10 "
                  name="password"
                  placeholder="Password"
                  type="password"
                />
                <div
                  class="absolute-y-center absolute left-[14px] flex items-center gap-2"
                >
                  <div
                    class="inline-block text-tertiary"
                    height="20"
                    width="20"
                  />
                </div>
                <div
                  class="absolute-y-center absolute right-[14px] flex items-center gap-2"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <button
              class="btn btn-lg btn-primary"
              disabled=""
              type="submit"
            >
              button.sign-in
            </button>
            <button
              class="btn btn-lg btn-secondary"
              type="button"
            >
              button.sign-up
            </button>
          </div>
        </form>
        <div
          class="my-1 flex flex-col gap-1"
        />
        <div
          class="absolute -bottom-28 left-1/2 -translate-x-1/2"
        >
          <a
            class="text-blue-primary font-14-regular"
            href="/auth/reset-password"
          >
            auth.sign-in.reset-password
          </a>
        </div>
      </div>
    </div>
    <footer
      class="font-14-bold text-secondary absolute bottom-[7%] left-1/2 z-10 -translate-x-1/2"
    >
      © ABC Studio All rights reserved
    </footer>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;
